--- a/views/about.pug
+++ b/views/about.pug
@@ -12,7 +12,7 @@ block content
       .about-intro-box.box
 
         //- Replace with your name
-        h1 Name
+        h1 Juan Agustin Herrera Walwyn
 
         //- Feel free to personalize the title below
         p Full Stack JavaScript Developer
@@ -46,12 +46,12 @@ block content
         //- Replace with your own contact info - feel free to use fake information if you prefer
         ul
           li 555-555-1234
-          li email@email.com
+          li nitsugahw001@gmail.com
 
         //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='') LinkedIn
-        a.btn-link(href='') GitHub
-        a.btn-link(href='') Twitter
+        a.btn-link(href='https://www.linkedin.com/in/juan-herrerawal/') LinkedIn
+        a.btn-link(href='https://github.com/HerrWal/') GitHub
+        a.btn-link(href='https://twitter.com/Nitsuga_Walwyn') Twitter
 
     nav.nav
       a(href='/')
