--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,10 +18,10 @@ html(lang="en" dir="ltr")
         .dev-intro-box
 
           //- Replace with your name
-          h5 Name
+          h5 Juan Herrera
 
           //- Replace with description of who you are, what you do, and why you are so awesome
-          p Description
+          p 🙋‍♂️Hi, I'm Juan. A Software Developer based out of the coastal metropolis of Miami. I consider myself a hard worker, a quick learner, a good communicator and an expert at handling information. I always had a passion for technology and learning new things and that passion had let me to a deep interest in software and how computers work. 
 
           //- Add path from your '/about' route handler to the href below
           a(href='') Learn More &rarr;
@@ -32,7 +32,7 @@ html(lang="en" dir="ltr")
           button#menu-icon.menu-icon(type='button' data-toggle='my-info')
 
           //- Replace with your name — this is for the mobile layout
-          span Name
+          span Juan Herrera
 
       block content
 
