--- a/views/about.pug
+++ b/views/about.pug
@@ -12,7 +12,7 @@ block content
       .about-intro-box.box
 
         //- Replace with your name
-        h1 Juan Agustin Herrera Walwyn
+        h1 Juan Herrera
 
         //- Feel free to personalize the title below
         p Full Stack JavaScript Developer
@@ -21,7 +21,7 @@ block content
         .about-bio
 
           //- Replace the boilerplate below with your best elevator pitch
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
+          p I'm a Full Stack JavaScript Techdegree Student at Team Treehouse. Through my educational experience I've refined my analytical and problem-solving skills. I've also gained experience using web technologies such as  JavaScript, Node.js, HTML5, CSS and more. And completed projects such as creating a browser-based word guessing game as well as developing good looking web aplications using HTML, CSS and JavaScript where I use different functionalities to practice the intricasies of Web Development. My goal is to pursue a role as a Web Developer to apply my technical knowledge to real problems. What type of developers do well in your organization? 
 
 
       .skills-contact-box.box
@@ -40,6 +40,7 @@ block content
           li Node.js
           li Express
           li Pug
+          li Linux
 
         h6 Contact Info
 
