--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,17 +14,17 @@ html(lang="en" dir="ltr")
       .sidebar-info-box
         br
         .thumbnail-box
-          img.thumbnail(src='https://placehold.it/550x350', alt='')
+          img.thumbnail(src='/static/images/Profile_Picture.jpg', alt='Profile picture')
         .dev-intro-box
 
           //- Replace with your name
           h5 Juan Herrera
 
           //- Replace with description of who you are, what you do, and why you are so awesome
-          p 🙋‍♂️Hi, I'm Juan. A Software Developer based out of the coastal metropolis of Miami. I consider myself a hard worker, a quick learner, a good communicator and an expert at handling information. I always had a passion for technology and learning new things and that passion had let me to a deep interest in software and how computers work. 
+          p 🙋‍♂️Hi, I'm Juan. A Software Developer from Miami. I consider myself a hard worker, easy to work with, a good communicator and an expert at handling information. I always had a passion for technology and learning, and that passion led me to a deep interest in Web Development. I always strive to see the big picture and I value attention to detail and professionalism.
 
           //- Add path from your '/about' route handler to the href below
-          a(href='') Learn More &rarr;
+          a(href='/about') Learn More &rarr;
 
     .wrapper
       .header
