--- a/views/index.pug
+++ b/views/index.pug
@@ -5,10 +5,10 @@ block content
   article.portfolio-intro
 
     //- Replace with your own heading like 'My Portfolio', or 'Hey, Potential Employers', or 'Let's make the web great together!' 
-    h1 Let's make the web even greater!
+    h1 Let's make the Web even greater!
 
     //- Replace with a description for your portfolio, what this project is, it's purpose, what it's supposed to accomplish, etc. 
-    p Hi! I'm Juan, a web developer based out the coastal metropolis of Miami. Welcome to my portfolio website, it is a place where I showcase the list of proyects I've built to potential employers. Feel free to check them out and don't hesitate to contact me if you agree they are super awesome.
+    p Welcome to my portfolio website! It is a place where I showcase the list of proyects I've built to potential employers. Feel free to check them out and don't hesitate to contact me if you agree they are super awesome.
 
 
   article.portfolio-project-thumbs
@@ -22,6 +22,6 @@ block content
           //- The project title for the h5 element's text
 
         .cell
-          a(href=`/projects/${project.id}` target="_blank")
+          a(href=`/projects/${project.id}`)
             img.thumbnail(src=`${project.image_urls[0]}`, alt=`${project.project_name}`)
             h5= project.project_name
