--- a/views/about.pug
+++ b/views/about.pug
@@ -44,9 +44,9 @@ block content
           li 786-372-1371
           li nitsugahw001@gmail.com
 
-        a.btn-link(href='https://www.linkedin.com/in/juan-herrerawal/') LinkedIn
-        a.btn-link(href='https://github.com/HerrWal/') GitHub
-        a.btn-link(href='https://twitter.com/Nitsuga_Walwyn') Twitter
+        a.btn-link(href='https://www.linkedin.com/in/juan-herrerawal/' target= '_blank') LinkedIn
+        a.btn-link(href='https://github.com/HerrWal/' target='_blank') GitHub
+        a.btn-link(href='https://twitter.com/Nitsuga_Walwyn' target='_blank') Twitter
 
     nav.nav
       a(href='/')
