--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -152,6 +152,7 @@ nav a span {
   width: 100%;
   max-width: 250px;
   border: 4px solid #fff;
+  border-radius: 15px;
 }
 
 .dev-intro-box {
@@ -260,6 +261,7 @@ nav a span {
   min-width: 100px;
   border: 4px solid #fff;
   box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
+  border-radius: 15px;
 }
 
 
